# src/login/login.controller.ts
@@ -1,6 +1,7 @@
-import { Body, Controller, ForbiddenException, HttpException, Post } from '@nestjs/common';
+import { Body, Controller, ForbiddenException, Get, HttpException, Post, Request, UseGuards } from '@nestjs/common';
 import { LoginService } from './login.service';
 import { LoginDTO } from './dto/login.dto';
+import { AuthGuard } from './login.guard';
 
 @Controller('login')
 export class LoginController {
@@ -13,5 +14,11 @@ export class LoginController {
     } catch (error) {
       throw new ForbiddenException('Erro de autoização...')
     }
+  }
+
+  @UseGuards(AuthGuard)
+  @Get('profile')
+  async getProfile(@Request() req){
+    return req.user
   }
 }
