# swagger.json
@@ -128,6 +128,17 @@
           }
         }
       }
+    },
+    "/login/profile": {
+      "get": {
+        "operationId": "LoginController_getProfile",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        }
+      }
     }
   },
   "info": {
